--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "ISC",
   "dependencies": {
     "core-js": "^2.5.1",
+    "radium": "^0.19.6",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
