--- a/package.json
+++ b/package.json
@@ -1,78 +1,88 @@
 {
   "name": "react-gallery",
-  "version": "0.0.1",
-  "description": "A Dynamic Image Gallery created with React",
+  "version": "0.0.2",
+  "description": "A dynamic image gallery created with React",
   "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "clean": "rimraf dist",
-    "cleanSrc": "rimraf dist/src",
-    "serve": "webpack-dev-server --config webpack-dev.config.js && TARGET_ENV=development",
-    "build": "npm run clean && webpack --config webpack-prod.config.js",
-    "deploy": "git subtree push --prefix dist origin gh-pages",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+  "dependencies": {
+    "autoprefixer": "^9.4.6",
+    "core-js": "^2.6.3",
+    "radium": "^0.25.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
-  "jest": {
-    "setupFiles": [
-      "raf/polyfill"
-    ],
-    "moduleNameMapper": {
-      "\\.(pdf|jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "identity-obj-proxy"
-    }
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.5",
+    "clean-webpack-plugin": "^1.0.1",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^2.1.0",
+    "enzyme": "^3.8.0",
+    "eslint": "^5.12.1",
+    "eslint-cli": "^1.1.1",
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "file-loader": "^3.0.1",
+    "gh-pages": "^2.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^23.6.0",
+    "jest-cli": "^23.6.0",
+    "jest-enzyme": "^7.0.1",
+    "lint-staged": "^8.1.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss": "^7.0.14",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^1.16.1",
+    "pretty-quick": "^1.10.0",
+    "prop-types": "^15.6.2",
+    "raf": "^3.4.1",
+    "react-test-renderer": "^16.7.0",
+    "rimraf": "^2.6.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-merge": "^4.2.1",
+    "webpack-visualizer-plugin": "^0.1.11",
+    "workbox-webpack-plugin": "^3.6.3"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/interglobalmedia/react-image-gallery.git"
   },
   "author": "Maria D. Campbell",
   "license": "ISC",
-  "dependencies": {
-    "core-js": "^2.5.1",
-    "radium": "^0.19.6",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+  "bugs": {
+    "url": "https://github.com/interglobalmedia/react-image-gallery/issues"
   },
-  "devDependencies": {
-    "@storybook/addon-actions": "^3.2.13",
-    "@storybook/addon-links": "^3.2.13",
-    "@storybook/react": "^3.2.13",
-    "autoprefixer": "^7.1.6",
-    "babel-core": "^6.26.0",
-    "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-react-jsx-img-import": "^0.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "browser-sync": "^2.18.13",
-    "css-hot-loader": "^1.3.2",
-    "css-loader": "^0.28.7",
-    "enzyme": "^3.1.0",
-    "eslint": "^4.10.0",
-    "eslint-plugin-react": "^7.4.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
-    "identity-obj-proxy": "^3.0.0",
-    "image-webpack-loader": "^3.4.2",
-    "imagemin-webpack-plugin": "^1.5.2",
-    "jest": "^21.2.1",
-    "jest-enzyme": "^4.0.1",
-    "json-loader": "^0.5.7",
-    "node-sass": "^4.5.3",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "postcss": "^6.0.13",
-    "postcss-loader": "^2.0.8",
-    "prop-types": "^15.6.0",
-    "raf": "^3.4.0",
-    "react-test-renderer": "^16.0.0",
-    "regenerator-runtime": "^0.11.0",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "uglifyjs-webpack-plugin": "^1.0.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3"
-  }
+  "homepage": "https://github.com/interglobalmedia/react-image-gallery#readme"
 }
