--- a/package.json
+++ b/package.json
@@ -73,8 +73,30 @@
     "workbox-webpack-plugin": "^3.6.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "clear": "jest --clearCache",
+    "lint": "eslint .",
+    "fix": "npx eslint --fix",
+    "eslint-check": "eslint --print-config . eslint-config-prettier-check",
+    "clean": "rimraf dist",
+    "cleanSrc": "rimraf dist/src",
+    "start": "webpack-dev-server --mode development --config config/webpack.base.config.js --open --hot --history-api-fallback env.PLATFORM=local --env.VERSION=stag",
+    "predeploy": "webpack --mode production --config config/webpack.prod.config.js --env.PLATFORM=production --env.VERSION=stag --progress",
+    "deploy": "gh-pages -d dist"
+
   },
+  "jest": {
+    "setupFiles": [
+        "raf/polyfill"
+    ],
+    "moduleNameMapper": {
+        "\\.(css|less|scss)$": "identity-obj-proxy"
+    },
+    "transform": {
+        "^.+\\.js$": "babel-jest",
+        "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/fileTransformer.js"
+    }
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/interglobalmedia/react-image-gallery.git"
