--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,27 +3,88 @@
         "browser": true,
         "commonjs": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "jest": true,
+        "serviceworker": true
     },
-    "extends": "eslint:recommended",
+    "settings": {
+        "react": {
+            "pragma": "React",
+            "version": "16.6.3"
+        }
+    },
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaFeatures": {
-            "experimentalObjectRestSpread": true,
             "jsx": true
         },
+        "ecmaVersion": 2018,
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "import",
+        "react",
+        "prettier"
     ],
     "rules": {
-        "indent": [
+        "react/jsx-indent": [
+            0
+        ],
+        "react/jsx-closing-bracket-location": [
+            0
+        ],
+        "react/jsx-closing-tag-location": [
+            0
+        ],
+        "react/jsx-curly-spacing": [
+            0
+        ],
+        "react/jsx-equals-spacing": [
+            0
+        ],
+        "react/jsx-first-prop-new-line": [
+            0
+        ],
+        "react/jsx-indent-props": [
+            0
+        ],
+        "react/jsx-max-props-per-line": [
+            0
+        ],
+        "react/jsx-one-expression-per-line": [
+            0
+        ],
+        "react/jsx-props-no-multi-spaces": [
+            0
+        ],
+        "react/jsx-tag-spacing": [
+            0
+        ],
+        "react/jsx-wrap-multilines": [
+            0
+        ],
+        "no-underscore-dangle": 0,
+        "max-len": ["off", {
+            "code": 80
+        }],
+        "import/no-extraneous-dependencies": [
             "error",
-            "tab"
+            {
+                "devDependencies": true
+            }
+        ],
+        "react/jsx-filename-extension": [1, {
+            "extensions": [".js", ".jsx"]
+        }],
+        "react/display-name": [0],
+        "no-unused-vars": 0,
+        "no-console": 0,
+        "indent": [
+            0
         ],
         "linebreak-style": [
-            "error",
-            "unix"
+            "off",
+            "eol-last"
         ],
         "quotes": [
             0
@@ -31,5 +92,15 @@
         "semi": [
             0
         ]
+    },
+    "globals": {
+        "window": true,
+        "document": true,
+        "localStorage": true,
+        "FormData": true,
+        "FileReader": true,
+        "Blob": true,
+        "navigator": true,
+        "speechSynthesis": true
     }
 }
