--- a/package.json
+++ b/package.json
@@ -76,10 +76,11 @@
     "test": "jest",
     "clear": "jest --clearCache",
     "lint": "eslint .",
-    "fix": "npx eslint --fix",
+    "fix": "npx eslint . --fix",
     "eslint-check": "eslint --print-config . eslint-config-prettier-check",
     "clean": "rimraf dist",
     "cleanSrc": "rimraf dist/src",
+    "copy": "src/favicon.ico dist/",
     "start": "webpack-dev-server --mode development --config config/webpack.base.config.js --open --hot --history-api-fallback env.PLATFORM=local --env.VERSION=stag",
     "predeploy": "webpack --mode production --config config/webpack.prod.config.js --env.PLATFORM=production --env.VERSION=stag --progress",
     "deploy": "gh-pages -d dist"
