--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "eslint-check": "eslint --print-config . eslint-config-prettier-check",
     "clean": "rimraf dist",
     "cleanSrc": "rimraf dist/src",
-    "copy": "src/favicon.ico dist/",
+    "copy": "cp ./src/favicon.ico dist/",
     "start": "webpack-dev-server --mode development --config config/webpack.base.config.js --open --hot --history-api-fallback --env.PLATFORM=local --env.VERSION=stag",
     "predeploy": "webpack --mode production --config config/webpack.prod.config.js --env.PLATFORM=production --env.VERSION=stag --progress",
     "deploy": "gh-pages -d dist"
